fix env file bug

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-
-REACT_APP_GOOGLE_API_KEY=AIzaSyAKEbvTxu-Mb0oIUBrKI2SXXhKAZEHoHXc
+REACT_APP_GOOGLE_API_KEY = "AIzaSyAKEbvTxu-Mb0oIUBrKI2SXXhKAZEHoHXc"
